# xelis_wasm_core

./: README.md  package-lock.json  package.json
examples/: test.js
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
