[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # Only need cdylib for WASM

[dependencies]
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"  # For async/await support
js-sys = "0.3"  # For JavaScript types
web-sys = { version = "0.3", features = ["console"] }
lazy_static = "1.4"
parking_lot = "0.12"
xelis-hash = { git = "https://github.com/xelis-project/xelis-hash", features = ["v2"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# Enable the panic hook for better error messages in wasm
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

# Add the dependency with the correct syntax
[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

# For Node.js specific features
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
web-sys = { version = "0.3.4", features = ['console'] }

# For browser-specific features (optional)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Add any non-WASM dependencies here

[profile.release]
# Optimize for small code size
opt-level = 's'
lto = true
codegen-units = 1
